# Simplex-Method-Calculator

./: CMakeLists.txt  README.md  SimplexCalc.cpp  SimplexCalc.h  main.cpp  op_overloads.h  s_vars.h  special_vars.h
root/Simplex Method Calculator/: CMakeLists.txt  SimplexCalc.cpp
